--- a/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
+++ b/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
@@ -49,10 +49,10 @@
                                 </connections>
                             </view>
                             <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BIr-r4-qHz">
-                                <rect key="frame" x="258" y="20" width="95" height="51"/>
+                                <rect key="frame" x="24" y="20" width="329" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Start"/>
+                                <state key="normal" title="                        Start                        "/>
                                 <connections>
                                     <action selector="toggleCapture:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hWG-CT-8T4"/>
                                 </connections>
@@ -60,9 +60,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.55316467142593717" blue="0.91897218535649683" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                        <viewLayoutGuide key="safeArea" id="lRb-aI-8je"/>
                     </view>
                     <connections>
                         <outlet property="scanView" destination="FDS-Q3-5h7" id="WnP-pM-kYz"/>
+                        <outlet property="startButton" destination="BIr-r4-qHz" id="H5t-U3-SK3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -128,6 +130,7 @@
                     <connections>
                         <outlet property="leftImageView" destination="315-Q4-CIR" id="UzL-cw-xFe"/>
                         <outlet property="rightImageView" destination="reB-2g-0pe" id="haz-VP-DyW"/>
+                        <outlet property="scrollContent" destination="F81-xx-7nT" id="rfb-dy-jza"/>
                         <outlet property="scrollView" destination="0dO-PR-fBd" id="pxy-VU-Gn5"/>
                     </connections>
                 </viewController>
