Added filtering for captured images so the rate of movement does not to be as consistent.  Still have issues with vertical motion and in-plane rotation.

--- a/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
+++ b/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
@@ -79,15 +79,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" minimumZoomScale="0.125" maximumZoomScale="4" bouncesZoom="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="0dO-PR-fBd">
+                            <scrollView multipleTouchEnabled="YES" contentMode="scaleAspectFit" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" canCancelContentTouches="NO" minimumZoomScale="0.125" maximumZoomScale="4" bouncesZoom="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="0dO-PR-fBd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F81-xx-7nT">
+                                    <view multipleTouchEnabled="YES" contentMode="scaleAspectFit" semanticContentAttribute="spatial" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F81-xx-7nT">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="315-Q4-CIR" userLabel="leftImageView">
+                                            <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="315-Q4-CIR" userLabel="leftImageView">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="335"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="1" green="0.97965418719999997" blue="0.1126728561" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -95,7 +95,7 @@
                                                     <accessibilityTraits key="traits" image="YES" allowsDirectInteraction="YES"/>
                                                 </accessibility>
                                             </imageView>
-                                            <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reB-2g-0pe" userLabel="rightImageView">
+                                            <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="reB-2g-0pe" userLabel="rightImageView">
                                                 <rect key="frame" x="0.0" y="332" width="375" height="335"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                                 <color key="backgroundColor" red="0.2003327361001046" green="0.24970242335246506" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
