Added ARKit implementation.  It does not seem to work with the iPhone 6 platform (maybe because we are capturing video via CVCaptureSession?).

--- a/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
+++ b/prototypes/OneCameraStereoMosaic/OneCameraStereoMosaic/Base.lproj/Main.storyboard
@@ -21,18 +21,26 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YC9-TL-zgx">
+                                    <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szh-dD-Dqx">
+                                        <rect key="frame" x="0.0" y="0.0" width="376" height="668"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" red="1" green="0.13227415795256325" blue="0.11407668650799641" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="gev-GP-QaO"/>
+                                        </connections>
+                                    </arscnView>
+                                    <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YC9-TL-zgx">
                                         <rect key="frame" x="0.0" y="-1" width="188" height="668"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
-                                        <color key="backgroundColor" red="0.27313060953789803" green="0.26508559006146393" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.27313060953789803" green="0.26508559006146393" blue="1" alpha="0.50165052816901412" colorSpace="custom" customColorSpace="displayP3"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                         </accessibility>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L4G-6J-VM1">
+                                    <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L4G-6J-VM1">
                                         <rect key="frame" x="188" y="-1" width="188" height="668"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
-                                        <color key="backgroundColor" red="1" green="0.97965418723818865" blue="0.11267285605494748" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="1" green="0.97965418719999997" blue="0.1126728561" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                         </accessibility>
@@ -64,6 +72,7 @@
                     </view>
                     <connections>
                         <outlet property="scanView" destination="FDS-Q3-5h7" id="WnP-pM-kYz"/>
+                        <outlet property="sceneView" destination="Szh-dD-Dqx" id="vnW-Mx-Zca"/>
                         <outlet property="startButton" destination="BIr-r4-qHz" id="H5t-U3-SK3"/>
                     </connections>
                 </viewController>
